# cpp-playground

./: CMakeLists.txt  main.cpp
pointer_struct/: size_offset.cpp  size_offset.h
